zapata-dx/force-app/main/default/objects/Unidad_Varada__c/Unidad_Varada__c.object-meta.xml
<CustomObject>
    <description>Reporte de una unidad inmovilizada en carretera. Es el dolor mas caro del cliente: cada hora detenida es perdida directa. Lo alimenta el subagente Atencion de Unidades Varadas.</description>
    <label>Unidad varada</label>
    <nameField>
        <displayFormat>VAR-{000000}</displayFormat>
        <label>Folio de reporte</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unidades varadas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>