zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Unidad identificada. Puede quedar vacia si el VIN no coincide con ninguna unidad registrada.</description>
    <label>Unidad</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Reportes de unidad varada</relationshipLabel>
    <relationshipName>Reportes_Varada</relationshipName>
    <type>Lookup</type>
</CustomField>