zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/Carga__c.field-meta.xml
<CustomField>
    <fullName>Carga__c</fullName>
    <description>Una unidad cargada cambia el tipo de grua y la urgencia.</description>
    <label>Estado de carga</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cargada</fullName>
            </value>
            <value>
                <fullName>Vacia</fullName>
            </value>
            <value>
                <fullName>No especifica</fullName>
                <default>true</default>
                <label>No especifica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>