zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/Carretera__c.field-meta.xml
<CustomField>
    <fullName>Carretera__c</fullName>
    <description>Carretera o via donde quedo la unidad.</description>
    <label>Carretera</label>
    <length>120</length>
    <type>Text</type>
</CustomField>