zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Caso creado para el escalamiento. El agente no cierra sin folio.</description>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Reportes de unidad varada</relationshipLabel>
    <relationshipName>Reportes_Varada</relationshipName>
    <type>Lookup</type>
</CustomField>