zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/Codigos_Falla_Tablero__c.field-meta.xml
<CustomField>
    <fullName>Codigos_Falla_Tablero__c</fullName>
    <description>Codigos o testigos que muestra el tablero. Permiten mandar la refaccion correcta a la primera.</description>
    <label>Codigos de falla en tablero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>