zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/Coordinador__c.field-meta.xml
<CustomField>
    <fullName>Coordinador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quien coordina la asistencia en carretera. El agente escala aqui.</description>
    <label>Coordinador de asistencia</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Reportes de varada asignados</relationshipLabel>
    <relationshipName>Reportes_Varada_Asignados</relationshipName>
    <type>Lookup</type>
</CustomField>