zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <description>Une el reporte con la conversacion y el log del agente.</description>
    <label>Correlation Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>