zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/Descripcion_Falla__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Falla__c</fullName>
    <description>Lo que reporta el operador, en sus palabras. No es un diagnostico.</description>
    <label>Descripcion de la falla</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>