zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/Estado__c.field-meta.xml
<CustomField>
    <fullName>Estado__c</fullName>
    <description>Ciclo de vida del reporte.</description>
    <label>Estado</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reportada</fullName>
                <default>true</default>
                <label>Reportada</label>
            </value>
            <value>
                <fullName>Asistencia asignada</fullName>
            </value>
            <value>
                <fullName>En sitio</fullName>
            </value>
            <value>
                <fullName>Resuelta en carretera</fullName>
            </value>
            <value>
                <fullName>Remolcada a taller</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>