zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/Fecha_Reporte__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Reporte__c</fullName>
    <description>Momento en que entro el reporte. Con esto se mide el tiempo de unidad detenida, que es el numero que abre el video.</description>
    <label>Fecha del reporte</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>