zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/Fecha_Resolucion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Resolucion__c</fullName>
    <description>Momento en que la unidad volvio a rodar o entro a taller.</description>
    <label>Fecha de resolucion</label>
    <type>DateTime</type>
</CustomField>