zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/Fuera_De_Carril__c.field-meta.xml
<CustomField>
    <fullName>Fuera_De_Carril__c</fullName>
    <defaultValue>false</defaultValue>
    <description>El agente confirma esto ANTES de seguir preguntando. Si es falso, no se recaba nada mas: se atiende la seguridad del operador primero.</description>
    <label>Fuera del carril</label>
    <type>Checkbox</type>
</CustomField>