zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/Horas_Detenida__c.field-meta.xml
<CustomField>
    <fullName>Horas_Detenida__c</fullName>
    <description>Horas que lleva o llevo detenida. Es la metrica de negocio que traduce el problema a dinero.</description>
    <formula>IF( ISBLANK(Fecha_Resolucion__c), (NOW() - Fecha_Reporte__c) * 24, (Fecha_Resolucion__c - Fecha_Reporte__c) * 24 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Horas detenida</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>