zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/Intermitentes_Encendidas__c.field-meta.xml
<CustomField>
    <fullName>Intermitentes_Encendidas__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Segunda confirmacion de seguridad antes de continuar.</description>
    <label>Intermitentes encendidas</label>
    <type>Checkbox</type>
</CustomField>