zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/Kilometro__c.field-meta.xml
<CustomField>
    <fullName>Kilometro__c</fullName>
    <description>Kilometro aproximado. Se acepta decimal porque el operador suele decir &quot;kilometro 45 y medio&quot;.</description>
    <label>Kilometro</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>