zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/Prioridad__c.field-meta.xml
<CustomField>
    <fullName>Prioridad__c</fullName>
    <description>Toda unidad varada nace como critica. El agente no la degrada.</description>
    <label>Prioridad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critica</fullName>
                <default>true</default>
                <label>Critica</label>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>