zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/Referencia_Ubicacion__c.field-meta.xml
<CustomField>
    <fullName>Referencia_Ubicacion__c</fullName>
    <description>Punto de referencia visible: caseta, puente, gasolinera.</description>
    <label>Referencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>