zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/Sentido__c.field-meta.xml
<CustomField>
    <fullName>Sentido__c</fullName>
    <description>Sentido de circulacion. Sin esto la grua puede salir al lado equivocado de la carretera.</description>
    <label>Sentido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Norte</fullName>
            </value>
            <value>
                <fullName>Sur</fullName>
            </value>
            <value>
                <fullName>Oriente</fullName>
            </value>
            <value>
                <fullName>Poniente</fullName>
            </value>
            <value>
                <fullName>No especifica</fullName>
                <default>true</default>
                <label>No especifica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>