zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/Sucursal_Apoyo__c.field-meta.xml
<CustomField>
    <fullName>Sucursal_Apoyo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Taller mas cercano que dara el apoyo o recibira la unidad.</description>
    <label>Sucursal de apoyo</label>
    <referenceTo>Sucursal__c</referenceTo>
    <relationshipLabel>Reportes de unidad varada</relationshipLabel>
    <relationshipName>Reportes_Varada</relationshipName>
    <type>Lookup</type>
</CustomField>