zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/VIN_Reportado__c.field-meta.xml
<CustomField>
    <fullName>VIN_Reportado__c</fullName>
    <description>Lo que dicto el operador, antes de validarlo. Se conserva aunque no coincida, para poder investigar despues.</description>
    <label>VIN reportado</label>
    <length>17</length>
    <type>Text</type>
</CustomField>