zapata-dx/force-app/main/default/objects/Unidad_Varada__c/fields/WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Orden de taller si la unidad fue remolcada.</description>
    <label>Orden generada</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Reportes de unidad varada</relationshipLabel>
    <relationshipName>Reportes_Varada</relationshipName>
    <type>Lookup</type>
</CustomField>