zapata-dx/force-app/main/default/objects/Unidad_Varada__c/validationRules/Resuelta_Requiere_Fecha.validationRule-meta.xml
<ValidationRule>
    <fullName>Resuelta_Requiere_Fecha</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR(ISPICKVAL(Estado__c, &quot;Resuelta en carretera&quot;), ISPICKVAL(Estado__c, &quot;Remolcada a taller&quot;)), ISBLANK(Fecha_Resolucion__c) )</errorConditionFormula>
    <errorDisplayField>Fecha_Resolucion__c</errorDisplayField>
    <errorMessage>Un reporte cerrado debe tener fecha de resolucion. Sin ella no se puede medir cuanto tiempo estuvo detenida la unidad.</errorMessage>
</ValidationRule>