zapata-dx/force-app/main/default/objects/Unidad_Varada__c/validationRules/Seguridad_Antes_De_Avanzar.validationRule-meta.xml
<ValidationRule>
    <fullName>Seguridad_Antes_De_Avanzar</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISPICKVAL(Estado__c, &quot;Reportada&quot;)), OR( NOT(Fuera_De_Carril__c), NOT(Intermitentes_Encendidas__c) ) )</errorConditionFormula>
    <errorDisplayField>Fuera_De_Carril__c</errorDisplayField>
    <errorMessage>No se puede avanzar el reporte sin confirmar que el operador esta fuera del carril y con las intermitentes encendidas. La seguridad va antes que el dato.</errorMessage>
</ValidationRule>