zapata-dx/force-app/main/default/objects/Unidad_Varada__c/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>NAME</columns>
    <columns>Estado__c</columns>
    <columns>Prioridad__c</columns>
    <columns>Carretera__c</columns>
    <columns>Kilometro__c</columns>
    <columns>Horas_Detenida__c</columns>
    <columns>Fecha_Reporte__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>